2007-11-17  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix a typo in BOOST_THREADS.
	* build-aux/boost.m4 (BOOST_THREADS): Properly set
	`boost_threads_save_CPPFLAGS' to `CPPFLAGS' instead of `LIBS'!
	Bug reported by David Herring.

2007-11-13  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Preserve the original values of --host / --build.
	This fixes `make check' in cross-compilation environments.
	* tests/atlocal.in ($build, $host): Replace with ...
	($build_alias, $host_alias): ... these.  New.
	* tests/testsuite.at (AT_CHECK_AUTOCONF): Use them here.

2007-11-12  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add keywords to the testsuite.
	* tests/testsuite.at (AT_CHECK_MACRO, AT_CHECK_MACRO_CROSS): Add an
	argument in 2nd position (minor backward incompatible change) to
	specify keywords for the tests.
	Use keywords for all tests (core/lib/header with or without cross).

2007-11-12  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add tests for Boost.Program_options.
	* README: Mention the new library.
	* build-aux/boost.m4 (BOOST_PROGRAM_OPTIONS): New macro.
	* tests/testsuite.at: Add a test for the new macro.

2007-11-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use Libtool and -R to encode run paths.
	* README: Mention the dependencies more clearly near the beginning.
	Add a step to use Libtool if it's not already used.
	* build-aux/boost.m4 (BOOST_FIND_LIB): Add -R flags in the LDFLAGS
	and fix a bug when --with-boost isn't used which leads to
	$with_boost being empty which leads that /lib is checked first.
	* configure.ac: Invoke AC_PROG_LIBTOOL.
	* tests/testsuite.at (AT_CONFIGURE_AC): Import the content of
	aclocal.m4 without the m4_include's in order to use AC_PROG_LIBTOOL
	without getting the hassle of libtoolize.
	(AT_CHECK_MACRO): Do not pass -W obsolete to autoconf to avoid
	spurious warnings due to Libtool.

2007-11-02  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Another fix for GCC3 and Boost.Thread.
	* build-aux/boost.m4 (BOOST_THREADS): Put -pthread in